<package>
  <name>slam_karto</name>
  <description>
     This package pulls in the Karto mapping library, and provides a ROS
     wrapper for using it.
  </description>
  <version>0.8.1</version>
  <maintainer email="mfergs7@gmail.com">Michael Ferguson</maintainer>
  <maintainer email="luc.bettaieb@gmail.com">Luc Bettaieb</maintainer>
  <maintainer email="rtoris@fetchrobotics.com">Russell Toris</maintainer>
  <author>Brian Gerkey</author>
  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_filters</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_srvs</build_depend>


  <run_depend>message_filters</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_srvs</run_depend>



</package>
